--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -16,7 +16,7 @@
           data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
           data-name="Deposit"
           data-email="<%= current_user.email %>"
-          data-description="User <%= @order.user %>"
+          data-description="User - <%=  "#{@order.user.first_name} #{@order.user.last_name}" %>"
           data-amount="<%= @order.balance_cents %>"
           data-currency="<%= @order.balance.currency %>"></script>
 
