--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <meta property="og:title" content="Bet Friends Forever - When social event become a thrilling experience">
-    <meta property="og:image" content="bf-friends.jpg">
+    <meta property="og:image" content="assets/images/bf-friends.jpg">
     <meta property="og:description" content="Bet Friends Forever is the best social betting webiste. Checkout by yourself and start betting with friends!">
     <meta property="og:site_name" content="Bet Friends Forever"/>
 
