--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -202,6 +202,7 @@
 .buton-holder {
   display: flex;
   justify-content: space-around;
+  margin-top: 20px;
 }
 // Small devices (landscape phones, 576px and up)
 @media (min-width: 0px) and (max-width: 768px) {
