--- a/app/views/pools/show.html.erb
+++ b/app/views/pools/show.html.erb
@@ -85,7 +85,7 @@
       // add bet closed text insead of the countdown numbers
       $("#pool-<%= @pool.id %>").html("Bet closed").addClass("finish");
       $(".winner-alert").removeClass("hidden");
-      $("#declarewinner").prop("disabled", true);
+      $("#declarewinner").prop("disabled", false);
       $("#winner-selection-submit").removeAttr("disabled");
 
       // if I click on the selection buttons, shake the bet closed and prevent clicking
