--- a/app/views/pages/_poolcard.html.erb
+++ b/app/views/pages/_poolcard.html.erb
@@ -7,7 +7,7 @@
           <p>Bets I Created</p>
         </li>
         <li class="tab-link" data-tab="Invites">
-          <p>My invitations</p>
+          <p>My Invitations</p>
           <div class="badge badge-red">
             <% if user_signed_in? %>
             <% invitesnumber = 0 %>
@@ -22,7 +22,7 @@
           </div>
         </li>
         <li class="tab-link" data-tab="Bets">
-          <p>My previous bets</p>
+          <p>My Previous Bets</p>
         </li>
       </ul>
       </div>
