--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Best Bet</title>
+    <title>Bet Friends Forever</title>
     <%= csrf_meta_tags %>
     <%= action_cable_meta_tag %>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <meta property="og:title" content="Bet Friends Forever - When social event become a thrilling experience">
-    <meta property="og:image" content="<%= image_url 'BFF-Cover.png' %>">
-    <meta property="og:description" content="Bet Friends Forever is the best social betting webiste. Checkout by yourself and start betting with friends!">
+    <meta property="og:type" content="article" />
+    <meta property="og:image" content="<%= image_path 'BFF-Cover.png' %>">
+    <meta property="og:description" content="Bet Friends Forever is the best social betting website. Checkout by yourself and start betting with friends!">
     <meta property="og:site_name" content="Bet Friends Forever"/>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
