--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <%= stylesheet_link_tag 'application', media: 'all' %>
-    <meta property="og:title" content="Bet Friends Forever - When social event become a thrilling experience">
+    <meta property="og:title" content="Bet Friends Forever - Raising the stakes on your social events">
     <meta property="og:type" content="article" />
     <meta property="og:image" content="<%= image_path 'BFF-Cover.png' %>">
-    <meta property="og:description" content="Bet Friends Forever is the best social betting website. Checkout by yourself and start betting with friends!">
+    <meta property="og:description" content="Bet Friends Forever is the best social betting app. Check it out and start betting on anything with your friends!">
     <meta property="og:site_name" content="Bet Friends Forever"/>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
