--- a/app/views/pools/_placebet.html.erb
+++ b/app/views/pools/_placebet.html.erb
@@ -29,9 +29,9 @@
           </div>
         </div>
         <% if current_user.balance_cents >= (@pool.stake * 100) %>
-        <input type="submit" name="commit" value="Confirm your <%= @pool.stake %> $ bet" class="tn btn-lg btn-success confirmbutton" data-disable-with="Confirm your bet">
+        <input type="submit" name="commit" value="Confirm your <%= @pool.stake %> € bet" class="tn btn-lg btn-success confirmbutton" data-disable-with="Confirm your bet">
         <% else %>
-        <input type="submit" name="commit" value="Confirm your <%= @pool.stake %> $ bet" class="tn btn-lg btn-success confirmbutton prevent-negative" data-disable-with="Confirm your bet">
+        <input type="submit" name="commit" value="Confirm your <%= @pool.stake %> € bet" class="tn btn-lg btn-success confirmbutton prevent-negative" data-disable-with="Confirm your bet">
         <% end %>
       </form>
       </div>
